motyga-rs/tui/src/chatwidget/snapshots/motyga_tui__chatwidget__tests__renamed_thread_footer_title.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Motyga to do anything                                                     "
"                                                                                "
"  gpt-5.3-codex high · Roadmap cleanup                                          "
