motyga-rs/tui/src/chatwidget/snapshots/motyga_tui__chatwidget__tests__slash_app_without_thread_id_shows_starting_error.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "lines_to_single_string(&cells[0])"
---
■ The Motyga desktop app is not available yet — use the `motyga` CLI in your terminal for now.
